--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -51,7 +51,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_cours_index') }}">back to list</a>
+    <a href="{{ path('app_eleve_mes_cours') }}">back to list</a>
 
     <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">edit</a>
 
